--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   terraform_plan:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
