credenciales IAM poara GH Actions

--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -4,28 +4,32 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # Allows manual execution
+  workflow_dispatch:
 
 jobs:
   terraform_plan:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'us-east-1'
+          role-to-assume: arn:aws:iam::905418008126:role/GitHubActionsRole # Replace with your role ARN
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3  # Use HashiCorp's action for setup
+        uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: "1.10.2"  # Specify the desired version of Terraform
+          terraform_version: "1.5.0"
 
       - name: Verify Terraform version
         run: terraform --version
 
       - name: Terraform init
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
         run: terraform init -input=false
 
       - name: Terraform validation
@@ -36,7 +40,7 @@ jobs:
         run: terraform plan -out=tfplan
 
       - name: Upload Plan Artifact
-        uses: actions/upload-artifact@v3  # Updated to v3
+        uses: actions/upload-artifact@v3
         with:
           name: tfplan
           path: tfplan
@@ -46,34 +50,29 @@ jobs:
     needs: terraform_plan
     steps:
       - name: Request Approval
-        uses: hmarr/auto-approve-action@v2  # Ensure this is still relevant for your workflow
+        uses: hmarr/auto-approve-action@v2
 
   terraform_apply:
     runs-on: ubuntu-latest
     needs: approval
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3
       
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3  # Use HashiCorp's action for setup
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          terraform_version: "1.10.2"  # Specify the desired version of Terraform
-
-      - name: Verify Terraform version
-        run: terraform --version
-
-      - name: Terraform init
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-        run: terraform init -input=false
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'us-east-1'
+          role-to-assume: arn:aws:iam::<your-account-id>:role/<your-role-name>
 
       - name: Download Plan Artifact
-        uses: actions/download-artifact@v3  # Updated to v3
+        uses: actions/download-artifact@v3
         with:
           name: tfplan
 
+      - name: Terraform apply
+        run: terraform apply -auto-approve tfplan
       - name: Terraform apply
         run: terraform apply -auto-approve tfplan
