--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -1,6 +1,12 @@
 name: TerraformApply
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -69,7 +75,7 @@ jobs:
     needs: terraform_plan
     steps:
       - name: Request Approval
-        uses: hmarr/auto-approve-action@v2
+        uses: hmarr/auto-approve-action@v2 
 
   terraform_apply:
     runs-on: ubuntu-latest
