--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -2,7 +2,11 @@ name: TerraformApply
 
 on:
   push:
+    branches:
+      -  main
   pull_request:
+    branches:
+      -  main
     
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
