--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -3,10 +3,10 @@ name: TerraformApply
 on:
   push:
     branches:
-      -  main
-  pull_request:
+      - main
+  pull_request: 
     branches:
-      -  main
+      - main
     
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -15,6 +15,7 @@ env:
 permissions:
   id-token: write
   contents: read
+  pull-requests: write  
 
 jobs:
   AssumeRole:
@@ -73,9 +74,10 @@ jobs:
   approval:
     runs-on: ubuntu-latest
     needs: terraform_plan
+    if: github.event_name == 'pull_request'  
     steps:
       - name: Request Approval
-        uses: hmarr/auto-approve-action@v2 
+        uses: hmarr/auto-approve-action@v4 
 
   terraform_apply:
     runs-on: ubuntu-latest
