--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -74,7 +74,7 @@ jobs:
   approval:
     runs-on: ubuntu-latest
     needs: terraform_plan
-    if: github.event_name == 'pull_request'  
+#    if: github.event_name == 'pull_request'  
     steps:
       - name: Request Approval
         uses: hmarr/auto-approve-action@v4 
