--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -3,10 +3,10 @@ name: Terraform Apply
 on: 
   push:
     branches: 
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
       
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
