--- a/.github/workflows/TerraformDestroy.yml
+++ b/.github/workflows/TerraformDestroy.yml
@@ -1,15 +1,70 @@
 name: TerraformDestroy
-on:
- workflow_dispatch:
+on: 
+  push:
+    branches: 
+      - main
+  pull_request:
+    branches:
+      - main
+      
+env:
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  IAM_ROLE: ${{ secrets.IAM_ROLE }}
 
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
  tf-destroy:
    runs-on: ubuntu-latest
-   env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'us-east-1'
    steps:
-     - name: Terraform destroy
-       id: destroy
-       run: terraform destroy -auto-approved
+   - uses: actions/checkout@v4
+     with:
+       ref: ${{ github.event.pull_request.head.sha }}
+       submodules: true
+       fetch-depth: 1
+
+   - name: Configure AWS Credentials
+     uses: aws-actions/configure-aws-credentials@v4
+     with:
+       role-to-assume: ${{ env.IAM_ROLE }}
+       role-session-name: github-actions-federation
+       aws-region: ${{ env.AWS_REGION }}
+
+   - name: Setup Terraform
+     uses: hashicorp/setup-terraform@v3
+     with:
+       terraform_version: "1.10.2"
+
+   - name: Verify Terraform version
+     run: terraform --version
+
+   - name: Clean previous tfplan
+     run: |
+          rm -f tfplan
+
+   - name: Terraform init
+     run: terraform init -input=false -reconfigure
+
+   - name: Terraform validation
+     run: terraform validate
+
+   - name: Terraform plan
+     if: github.event_name == 'pull_request' || github.event_name == 'push'
+     id: plan
+     run: terraform plan -out=tfplan
+
+   - name: Upload Plan Artifact
+     uses: actions/upload-artifact@v4
+     with:
+       name: tfplan
+       path: tfplan
+
+   - name: Terraform Apply
+     if: github.event_name == 'pull_request' || github.event_name == 'push'
+     run: terraform apply -auto-approve tfplan
+
+   - name: Terraform destroy
+     id: destroy
+     run: terraform destroy -auto-approve
