--- a/.github/workflows/TerraformDestroy.yml
+++ b/.github/workflows/TerraformDestroy.yml
@@ -1,11 +1,6 @@
-name: TerraformDestroy
-on: 
-  push:
-    branches: 
-      - main
-  pull_request:
-    branches:
-      - main
+name: Terraform Destroy
+on:
+ workflow_dispatch:
       
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
